--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico" />
+    <script crossorigin src="https://unpkg.com/@daily-co/daily-js"></script>
     <title>War Room</title>
   </head>
   <body>
