feat: start setting up war room

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
+    
+    <script>
+      // Add global variable for Daily to work
+      var global = global || window;
+    </script>
     <script src="/src/index.tsx" type="module"></script>
   </body>
 </html>
